; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_decay_ms_set.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_arena.c_arena_decay_ms_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, %struct.TYPE_5__*, i32*, i32)* @arena_decay_ms_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arena_decay_ms_set(i32* %0, i32* %1, %struct.TYPE_5__* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @arena_decay_ms_valid(i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %5
  store i32 1, i32* %6, align 4
  br label %33

16:                                               ; preds = %5
  %17 = load i32*, i32** %7, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = call i32 @malloc_mutex_lock(i32* %17, i32* %19)
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %22 = load i32, i32* %11, align 4
  %23 = call i32 @arena_decay_reinit(%struct.TYPE_5__* %21, i32 %22)
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = call i32 @arena_maybe_decay(i32* %24, i32* %25, %struct.TYPE_5__* %26, i32* %27, i32 0)
  %29 = load i32*, i32** %7, align 8
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  %32 = call i32 @malloc_mutex_unlock(i32* %29, i32* %31)
  store i32 0, i32* %6, align 4
  br label %33

33:                                               ; preds = %16, %15
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}

declare dso_local i32 @arena_decay_ms_valid(i32) #1

declare dso_local i32 @malloc_mutex_lock(i32*, i32*) #1

declare dso_local i32 @arena_decay_reinit(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @arena_maybe_decay(i32*, i32*, %struct.TYPE_5__*, i32*, i32) #1

declare dso_local i32 @malloc_mutex_unlock(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
